Add #witness mode to (Acc)LoopSynth algorithms

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1099,9 +1099,9 @@ We summarize algorithms in \cref{table:summary:algorithms}, recalling the basic 
 			% Cycles
 
 			\hline
-			Cycle                  & \styleIMI{inf\_cycle}                            & \cellYes{} & \cellNo{}  \\
+			Cycle                  & \styleIMI{inf\_cycle}                            & \cellYes{} & \cellYes{}  \\
 			\hline
-			Accepting cycle        & \styleIMI{inf\_cycle\_through(state\_predicate)} & \cellYes{} & \cellNo{}  \\
+			Accepting cycle        & \styleIMI{inf\_cycle\_through(state\_predicate)} & \cellYes{} & \cellYes{}  \\
 			\hline
 			Accepting cycle (NDFS) & \styleIMI{inf\_acc\_cycle}                            & \cellYes{} & \cellYes{} \\
 			\hline
