--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -46,6 +46,8 @@
 % END Watermarking
 
 
+\setcounter{secnumdepth}{3}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MARGINS, HEADERS AND FOOTERS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
